--- a/src/vue/dataSharing/index.html
+++ b/src/vue/dataSharing/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title></title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width">
+<title></title>
 </head>
 <body>
 <div id="app"></div>
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script>
-const liComp = Vue.component('li-comp', {
+Vue.component('li-comp', {
   props: {
     text: '',
     index: 0
@@ -21,7 +22,7 @@ const liComp = Vue.component('li-comp', {
   }
 });
 
-const app = new Vue({
+const vm = new Vue({
   el: '#app',
   template: `
     <div>
