--- a/src/vue/lifecycle/index.html
+++ b/src/vue/lifecycle/index.html
@@ -9,14 +9,14 @@
 <div id="app"></div>
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script>
-const h1Comp = Vue.component('h1-comp', {
+Vue.component('h1-comp', {
   props: {
     h1text: String
   },
   template: `<h1>{{ h1text }}</h1>`
 });
 
-const btnComp = Vue.component('button-comp', {
+Vue.component('button-comp', {
   template: `<button @click="clickHandler">Click!</button>`,
   methods: {
     clickHandler: function(e){
@@ -25,8 +25,7 @@ const btnComp = Vue.component('button-comp', {
   }
 });
 
-const period = 1000;
-const vm     = new Vue({
+const vm = new Vue({
   el: '#app',
   template: `
   <div>
@@ -35,7 +34,9 @@ const vm     = new Vue({
   </div>`,
   methods: {
     clickHandler: function(e){
-      console.log(e)
+      const self  = this;
+      const c     = e.currentTarget;
+      self.h1text = c.tagName;
     }
   },
   data: function(){
@@ -68,8 +69,6 @@ const vm     = new Vue({
     this.h1text = 'destroyed';
   }
 });
-
-console.log(vm)
 </script>
 </body>
 </html>
