--- a/src/vue/dataSharing/index.html
+++ b/src/vue/dataSharing/index.html
@@ -9,6 +9,7 @@
 <div id="app"></div>
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script>
+// props は別コンポーネントからの data を受け取るために利用する。
 Vue.component('li-comp', {
   props: {
     text: '',
