--- a/src/vue/vuex-getstart/index.html
+++ b/src/vue/vuex-getstart/index.html
@@ -10,53 +10,6 @@
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script src="https://cdn.jsdelivr.net/npm/vuex"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue-router"></script>
-<script>
-// Actions   非同期処理用。
-// Mutations 同期処理用(状態変更)。state 変更の唯一の手段。
-
-// [VueComponents] -> Dispatch -> [Actions] -> Commit
-// |                                           |
-// Render <---------- [State] <-- Mutates <--- [Mutations(異変)]
-
-
-Vue.use(Vuex);
-const store = new Vuex.Store({
-  state: {
-    count: 0
-  },
-  mutations: {
-    increment: function(){
-      this.state.count = this.state.count + 1;
-    }
-  }
-});
-
-// Counter Component
-const Counter = {
-  template: `<p>{{ count }}</p>`,
-  computed: Vuex.mapState({
-    // this.count が store.state.count にマッピング。
-    count: state => state.count,
-    countAlias: 'count'
-  })
-};
-
-const vm = new Vue({
-  el: '#app',
-  store,
-  components: {
-    counter: Counter
-  },
-  template: `<div>
-<counter></counter>
-  </div>
-  `
-});
-
-
-// state update.
-store.commit('increment');
-console.log(store.state.count);
-</script>
+<script src="./main.js"></script>
 </body>
 </html>
