--- a/src/vue/plusMinus/index.html
+++ b/src/vue/plusMinus/index.html
@@ -2,57 +2,14 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device">
+<meta name="viewport" content="width=device-width">
 <title></title>
 </head>
 <body>
 <div id="app"></div>
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script>
-Vue.component('h1Comp', {
-  props: {
-    result: Number
-  },
-  template: `<h1>{{ result }}</h1>`,
-});
-
-Vue.component('buttonComp', {
-  props:{
-    text: String
-  },
-  template: `<button @click="updateH1">{{ text }}</button>`,
-  methods: {
-    updateH1: function(e){
-      this.$emit('updateH1Handler', e);
-    }
-  }
-});
-
-const vm = new Vue({
-  el: '#app',
-  template: `
-<div>
-<h1Comp :result="h1Text" />
-<buttonComp @updateH1Handler="increseEvent" :text="plusButtonText" />
-<buttonComp @updateH1Handler="decreseEvent" :text="minusButtonText" />
-</div>
-  `,
-  data: function(){
-    return {
-      h1Text: 0,
-      plusButtonText: '+',
-      minusButtonText: '-'
-    }
-  },
-  methods: {
-    increseEvent: function(e){
-      this.h1Text = parseInt(this.h1Text, 10) + 1;
-    },
-    decreseEvent: function(e){
-      this.h1Text = parseInt(this.h1Text, 10) -1;
-    }
-  }
-});
-</script>
+<script src="https://cdn.jsdelivr.net/npm/vuex"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue-router"></script>
+<script src="./main.js"></script>
 </body>
 </html>
