--- a/src/vue/transation/index.html
+++ b/src/vue/transation/index.html
@@ -18,38 +18,13 @@
 <body>
 <div id="app">
   <button type="button" @click="show=!show">Click</button>
-<!--
-<transition 
-  enter-class="CLS1 CLS2 .."
-  enter-active-class="CLS1 CLS2 .."
-  enter-to-class="CLS1 CLS2 .."
-  leave-class="CLS1 CLS2 .."
-  leave-active-class="CLS1 CLS2 .."
-  leave-to-class="CLS1 CLS2 ..">
-</transition>
--->
   <transition name="va" v-if="show">
     <p>{{ result }}</p>
   </transition>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script>
-// v-enter:
-// v-enter-active:
-// v-enter-to:
-// v-leave:
-// v-leave-active:
-// v-leave-to:
-const vm = new Vue({
-  el: '#app',
-  data: function(){
-    return {
-      result: 'default',
-      show: false
-    }
-  }
-});
-</script>
+<script src="https://cdn.jsdelivr.net/npm/vuex"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue-router"></script>
+<script src="./main.js"></script>
 </body>
 </html>
