--- a/src/vue/vuewebpack-example/output/index.html
+++ b/src/vue/vuewebpack-example/output/index.html
@@ -6,6 +6,7 @@
 <title>Webpack App</title>
 </head>
 <body>
+<div id="app"></div>
 <script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
