--- a/src/vue/vuewebpack-example/output/index.html
+++ b/src/vue/vuewebpack-example/output/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="./js/main.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
